--- a/diary/templates/diary/index.html
+++ b/diary/templates/diary/index.html
@@ -1,9 +1,9 @@
-{% extends './base.html' %}
+{% extends 'diary/base.html' %}
 
 {% load static %}
 
 {% block title %}
-<title>base.indexの継承ページ</title>
+base.indexの継承ページ
 {% endblock %}
 
 {% block header %}
