メール送信(作成途中)ページ表示まで

--- a/diary/templates/diary/inquiry.html
+++ b/diary/templates/diary/inquiry.html
@@ -10,7 +10,7 @@
         <div class="container px-5">
             <div class="row gx-5 align-items-center">
                 <div class="my-div-style">
-                    <form method="post">
+                    <form method="POST">
                         {% csrf_token %}
 
                         {{ form.non_field_errors }}
