--- a/diary/templates/diary/base.html
+++ b/diary/templates/diary/base.html
@@ -37,6 +37,20 @@
         </nav>
         <!-- Header-->
         {% block header %}{% endblock %}
+
+        {% if messages %}
+        <div class="container">
+            <div class="my-div-style w-100">
+                <ul class="messages" style="list-style: none;">
+                    {% for msg in messages %}
+                    <li {% if message.tags%} class="{{message.tags}}" {% endif %}>
+                        {{msg}}
+                    </li>
+                    {% endfor %}
+                </ul>
+            </div>
+        </div>
+        {% endif %}
         <!-- Content section 1-->
         {% block contents  %}{% endblock %}
         <!-- Footer-->
