--- a/diary/templates/diary/inquiry.html
+++ b/diary/templates/diary/inquiry.html
@@ -6,7 +6,7 @@
 
 {% block contents %}
 <section id="scroll">
-    <div class="toast-container">
+    <div class="container">
         <div class="container px-5">
             <div class="row gx-5 align-items-center">
                 <div class="my-div-style">
