--- a/diary/templates/diary/base.html
+++ b/diary/templates/diary/base.html
@@ -43,7 +43,7 @@
             <div class="my-div-style w-100">
                 <ul class="messages" style="list-style: none;">
                     {% for msg in messages %}
-                    <li {% if message.tags%} class="{{message.tags}}" {% endif %}>
+                    <li {% if msg.tags%} class="{{message.tags}}" {% endif %}>
                         {{msg}}
                     </li>
                     {% endfor %}
