--- a/diary/templates/diary/base.html
+++ b/diary/templates/diary/base.html
@@ -36,10 +36,10 @@
                             <a class="nav-link" href="{% url 'account_logout' %}">Log Out</a>
                         </li>
                         {% else %}
-                        <li class="nav-item">
+                        <li class="nav-item {% block account_signup %}{% endblock %}">
                             <a class="nav-link" href="{% url 'account_signup' %}">Sign Up</a>
                         </li>
-                        <li class="nav-item">
+                        <li class="nav-item {% block account_login %}{% endblock %}">
                             <a class="nav-link" href="{% url 'account_login' %}">Log In</a>
                         </li>
                         {% endif %}
