--- a/diary/templates/diary/base.html
+++ b/diary/templates/diary/base.html
@@ -32,6 +32,11 @@
                             <a class="nav-link" href="{% url 'diary:inquiry' %}">INQUIRY</a>
                         </li>
                         {% if user.is_authenticated %}
+                        <li class="nav-item {% block active_diary_list %}{% endblock %}">
+                        <a class="nav-link" href="{% url 'diary:diary_list' %}">DIARY_LIST</a>
+                        </li>
+                        {% endif %}
+                        {% if user.is_authenticated %}
                         <li class="nav-item">
                             <a class="nav-link" href="{% url 'account_logout' %}">Log Out</a>
                         </li>
