--- a/diary/templates/diary/diary_create.html
+++ b/diary/templates/diary/diary_create.html
@@ -11,7 +11,7 @@
 <div class="container">
     <div class="row">
         <div class="my-div-style w-100">
-            <form action="post" enctype="multipart/form-data">
+            <form method="post" enctype="multipart/form-data">
                 {% csrf_token %}
                 <table class="table">
                     {{ form.as_table }}
